Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  Some future release Zope 3.2.0

    New features

      - Implemented the password managers proposal. Main idea beside the
        proposal is a standard way to implement password encoders/checkers, see
        zope.app.authentication.interfaces.IPasswordManager for details.

        + Added basic password managers: Plain Text, MD5, SHA1.

        + Support for password managers added for ZCML principals and
          principals saved in local PrincipalFolers.

        + Added bin/zpasswd command line script which helps to create ZCML
          principals.

        + Password managers support integrated into bin/mkzopeinstance.

        + New database generation created for convert local principals to new
          format.

      - Implemented the language namespace proposal. Now you can override
        the browser preferred language through the URL, like this:

          http://site.org/++lang++ru/path

        Note: If you want to use a custom IUserPreferredLanguages adapter and
        the '++lang++' feature together you should use
        zope.app.publisher.browser.CacheableBrowserLanguages adapter as a base
        class or at least as example.

      - Implemented a new object introspector. Instead of just providing
        information of the object's class, the new introspector focuses on
        providing information that is specific to the instance, such as
        directly provided interfaces and data, for example attribute values
        and annotation values.

      - Implemented the `devmode` switch for `zope.conf`. When turned on a
        ZCML feature called `devmode` is provided. Packages can then register
        functionality based on this feature. In Zope 3 itself, the devmode is